# AutoSetupPy

./: AutoSetupPy.cmake  CMakeLists.txt  README.md  setup.py  setup.py.in
aSimpleExample/: simple_example.cpp  simple_example.h
